packages/forge-dsl/fixtures/errors/e26-depth-skip.fable
// expect: FORGE107
-> go

=== go ===
A question.
+ Answer it.
  * * * Way too deep.
    -> END
  + + Stay shallow.
    -> END
+ Ignore it.
  -> END
